[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greendiary"
version = "0.1.6"
authors = [
    { name = "Risal Nasar", email = "mail.risal@gmail.com" }
]
description = "A Python package for common functions to make life easier."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "cryptography",
    "gspread",
    "gspread_dataframe",
    "IPy",
    "ldap3",
    "matplotlib",
    "netaddr",
    "numpy",
    "pandas",
    "protobuf",
    "pyodbc",
    "pytz",
    "PyYAML",
    "Requests",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/RisalNasar/greendiary"
Repository = "https://github.com/RisalNasar/greendiary"
Issues = "https://github.com/RisalNasar/greendiary/issues"
